# exeggtractor

./: .gitignore  .pylintrc  DETAILS.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
exeggtractor/: __init__.py  api.py  cli.py  extract.py  extractor.py  matcher.py  models.py  scrub.py  utils.py
exeggtractor/data/: tokusei.txt  wazaname.txt
