[tool.poetry]
name = "exeggtractor"
version = "1.0.0"
description = "A Rental Team screenshot analyzer for Pokemon Sword/Shield."
authors = ["Eric Choi <emchoi91@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
opencv-python-headless = "^4.5.4"
numpy = "^1.21.4"
colour-science = "^0.3.16"
pytesseract = "^0.3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"

[tool.poetry.scripts]
exeggtract = 'exeggtractor.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
